--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Korpse
 SEOTitle: 开水的博客
 header-img: img/home-bg.jpg
 email: 543514071@qq.com.com
-description: "Don't live like a corpse, be colorful."
+description: "Don't live like a fucking corpse."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
